--- a/td_dashboard/templates/td_dashboard/demographics.html
+++ b/td_dashboard/templates/td_dashboard/demographics.html
@@ -3,7 +3,9 @@
           <div class="panel-heading clearfix">{{ subject_identifier }}<span class="pull-right"><a href="{% url 'search_url' %}" role="button" class="btn btn-sm btn-primary">Close</a></span></div>
       <div class="panel-body"> 
         {% for key, value in demographics.items %}
-    		  <strong>{{ key|title }}: </strong> {{ value.0 }}
+        	{% if value.0 %}
+    		 	<small><strong>{{ key|title }}: </strong> {{ value.0 }}</small>
+    		{% endif %}
     	{% endfor %}
       </div>
     </div>
