--- a/td_dashboard/templates/td_dashboard/enrollments.html
+++ b/td_dashboard/templates/td_dashboard/enrollments.html
@@ -7,12 +7,12 @@
 	  			<li class="list-inline-item medium">
 	  				 {% for label, url in enrollments %}
 					 	{% if "complete" in label %}
-					 		|
+					 		<span class="glyphicon glyphicon-ok small" style="color:green"></span>
 					 	{% else %}
-					 		|<span style="background:red;"> </span> 
+					 		<span class="glyphicon glyphicon-asterisk small" style="color:red"></span>
 					 	{% endif %}
 					 	{% if dashboard_type == 'maternal' %}
-	  						<a href="{{url}}?next={% url 'subject_dashboard_url' subject_identifier %}&subject_identifier={{subject_identifier}}">{{label}}</a>
+	  						<small><a href="{{url}}?next={% url 'subject_dashboard_url' subject_identifier %}&subject_identifier={{subject_identifier}}">{{label}}</a></small>
 	  					{% else %}
 	  						<a href="{{url}}?next={% url 'infant_subject_dashboard_url' subject_identifier %}&subject_identifier={{subject_identifier}}">{{label}}</a>
 	  					{% endif %}
