--- a/td_dashboard/templates/td_dashboard/enrollments.html
+++ b/td_dashboard/templates/td_dashboard/enrollments.html
@@ -1,5 +1,5 @@
     <div class="panel-group">
-    	<div class="panel panel-success">
+    	<div class="panel panel-info">
           <div class="panel-heading clearfix">Enrollments</div>
       <div class="panel-body"> 
 		<!--  <blockquote class="blockquote" style="font-family: "Times New Roman", Times, serif;"> -->
