--- a/td_dashboard/templates/td_dashboard/demographics.html
+++ b/td_dashboard/templates/td_dashboard/demographics.html
@@ -1,5 +1,5 @@
     <div class="panel-group">
-    	<div class="panel panel-success">
+    	<div class="panel panel-info">
           <div class="panel-heading clearfix">{{ subject_identifier }}<span class="pull-right"><a href="{% url 'search_url' %}" role="button" class="btn btn-sm btn-primary">Close</a></span></div>
       <div class="panel-body"> 
         {% for key, value in demographics.items %}
