--- a/td_dashboard/templates/td_dashboard/infant/requisitions.html
+++ b/td_dashboard/templates/td_dashboard/infant/requisitions.html
@@ -22,10 +22,18 @@
 				{% for reqs in requisitions %}
 			    	<tr>
 			    		<td><label><input type="checkbox" name="requisition-checkbox" value="{{reqs.subject_requisition.pk}}"></label></td>
-			    		<td><small>{{reqs.panel_name}}</small></td>
+			    		<td>
+			    			 {% if reqs.entry_status == 'REQUIRED' %}
+						        	<span title="{{reqs.panel_name}}" class="glyphicon glyphicon-asterisk small" style="color:red"></span> {{reqs.panel_name}}
+						     {% elif reqs.entry_status == 'KEYED' %}
+						        	<span title="{{reqs.panel_name}}" class="glyphicon glyphicon-ok small" style="color:green"></span> {{reqs.panel_name}}
+						     {% else %}
+						     	<del>{{reqs.panel_name}}</del>
+						     {% endif %}
+			    		</td>
 			    		<td>
 			    		{% if reqs.entry_status == 'NOT_REQUIRED' %}
-						     <del>{{ reqs.title|title }}</del>
+						     <del>{{reqs.panel_name|title }}</del>
 						{% else %}
 			    			{% if reqs.maternal_requisition %}
 			    				<a href="{{ reqs.url }}?visit_code={{ reqs.visit_code }}&appointment_pk={{reqs.appointment.str_pk}}&subject_identifier={{subject_identifier}}&panel_name={{reqs.panel_name}}&next={{ dashboard_url }}">{{ reqs.infant_requisition.requisition_identifier }}</a>
