--- a/td_dashboard/templates/td_dashboard/maternal/appointments.html
+++ b/td_dashboard/templates/td_dashboard/maternal/appointments.html
@@ -1,7 +1,7 @@
 	<div class="panel-group">
 		<div class="panel panel-warning">
 			{% if selected_appointment %}
-				<div class="panel-heading clearfix"><B>{{ selected_appointment.title }}</B>: {{ selected_appointment.subject_visit.report_datetime|date:"Y-m-d"| capfirst }}<span class="pull-right"><a href="{% url 'infant_subject_dashboard_url' subject_identifier %} role="button" class="btn btn-sm btn-default">appointments</a></span></div>
+				<div class="panel-heading clearfix"><B>{{ selected_appointment.title }}</B>: {{ selected_appointment.subject_visit.report_datetime|date:"Y-m-d"| capfirst }}<span class="pull-right"><a href="{% url 'subject_dashboard_url' subject_identifier %} role="button" class="btn btn-sm btn-default">appointments</a></span></div>
 			{% else %}
 				<div class="panel-heading">Appointments</div>
 		     	<div class="panel-body">                              
@@ -20,7 +20,7 @@
 			    		{% else %}
 			        		{% for appointment in appointments %}
 					            <tr>
-					            <td><span class="label bg-success">{{appointment.visit_code}}</span></td>
+					            <td>{{appointment.visit_code}}</td>
 						        <td>{{appointment.title}}</td>
 								<td>{{appointment.appt_type | capfirst}}</td>
 								<td>{{appointment.appt_datetime|date:"D d M Y"| capfirst}}</td>
@@ -30,7 +30,7 @@
 						        		<a href="{% url 'admin:td_maternal_maternalvisit_change' appointment.maternal_visit.pk %}?next={% url 'subject_dashboard_url' appointment.subject_identifier %}">{{ appointment.maternal_visit.report_datetime |date:"Y-m-d D"| capfirst }}</a>
 						        		<span class="pull-right"><a href="{% url 'subject_dashboard_url' appointment.str_pk appointment.subject_identifier %}" role="button" class="btn btn-sm btn-default">forms</a></span>
 						        	{% else %}
-						        		<a href="{% url 'admin:td_maternal_maternalvisit_add' %}?next=subject_dashboard_url&subject_identifier={{ appointment.subject_identifier }}&visit_code={{ appointment.visit_code }}">Add Visit</a>
+						        		<a href="{% url 'admin:td_maternal_maternalvisit_add' %}?next=subject_dashboard_url&subject_identifier={{ appointment.subject_identifier }}&visit_code={{ appointment.visit_code }}&appointment">Add Visit</a>
 						        	{% endif %}
 						        </td>
 					            </tr>
