--- a/td_dashboard/templates/td_dashboard/maternal/appointments.html
+++ b/td_dashboard/templates/td_dashboard/maternal/appointments.html
@@ -30,7 +30,7 @@
 						        		<a href="{% url 'admin:td_maternal_maternalvisit_change' appointment.maternal_visit.pk %}?next={% url 'subject_dashboard_url' appointment.subject_identifier %}">{{ appointment.maternal_visit.report_datetime |date:"Y-m-d D"| capfirst }}</a>
 						        		<span class="pull-right"><a href="{% url 'subject_dashboard_url' appointment.str_pk appointment.subject_identifier %}" role="button" class="btn btn-sm btn-default">forms</a></span>
 						        	{% else %}
-						        		<a href="{% url 'admin:td_maternal_maternalvisit_add' %}?next=subject_dashboard_url&subject_identifier={{ appointment.subject_identifier }}&visit_code={{ appointment.visit_code }}&appointment">Add Visit</a>
+						        		<a href="{% url 'admin:td_maternal_maternalvisit_add' %}?appointment={{appointment.str_pk}}&next={% url 'subject_dashboard_url' appointment.subject_identifier %}&visit_code={{ appointment.visit_code }}">Add Visit</a>
 						        	{% endif %}
 						        </td>
 					            </tr>
