--- a/td_dashboard/templates/td_dashboard/enrollments.html
+++ b/td_dashboard/templates/td_dashboard/enrollments.html
@@ -1,12 +1,11 @@
     <div class="panel-group">
     	<div class="panel panel-info">
-          <div class="panel-heading clearfix">Enrollment</div>
       <div class="panel-body"> 
 	  				 {% for label, url in enrollments %}
 					 	{% if dashboard_type == 'maternal' %}
-	  						<a role="button" class="btn btn-sm {% if "complete" in label %}btn-success{% else %}btn-default{% endif %}" href="{{url}}?next={% url 'subject_dashboard_url' subject_identifier %}&subject_identifier={{ subject_identifier }}">{{ label }}</a>
+	  						<a role="button" class="btn btn-sm {% if "Add" not in label %}btn-success{% else %}btn-default{% endif %}" href="{{url}}?next={% url 'subject_dashboard_url' subject_identifier %}&subject_identifier={{ subject_identifier }}">{% if "Add" not in label %}<span class="glyphicon glyphicon-ok"></span> {% endif %}{{ label }}</a>
 	  					{% else %}
-	  						<a role="button" class="btn btn-sm {% if "complete" in label %}btn-success{% else %}btn-default{% endif %}" href="{{url}}?next={% url 'infant_subject_dashboard_url' subject_identifier %}&subject_identifier={{ subject_identifier }}">{{ label }}</a>
+	  						<a role="button" class="btn btn-sm {% if "Add" not in label %}btn-success{% else %}btn-default{% endif %}" href="{{url}}?next={% url 'infant_subject_dashboard_url' subject_identifier %}&subject_identifier={{ subject_identifier }}">{% if "Add" not in label %}<span class="glyphicon glyphicon-ok"></span> {% endif %}{{ label }}</a>
 	  					{% endif %}
 		 			{% endfor %}
       </div>
