--- a/td_dashboard/templates/td_dashboard/search_dashboard.html
+++ b/td_dashboard/templates/td_dashboard/search_dashboard.html
@@ -34,13 +34,13 @@
                                 <a role="button" title="Go to dashboard" class="btn btn-sm btn-success" href="{% url 'subject_dashboard_url' obj.subject_identifier %}">{{ obj.subject_identifier }}</a>
                               {% else %}
                                 {% if obj.is_eligible %}
-                                  <a role="button" title="Add Maternal Consent" class="btn btn-sm btn-primary" href="{% url 'admin:td_maternal_maternalconsent_add' %}?reference_pk={{obj.reference_pk}}&next=&next={% url 'search_url' %}">Add Consent</a>
+                                  <a role="button" title="Add Maternal Consent" class="btn btn-sm btn-primary" href="{% url 'admin:td_maternal_maternalconsent_add' %}?reference={{obj.reference}}&next=&next={% url 'search_url' %}">Add Consent</a>
                                 {% else %}
                                   Not eligible
                                 {% endif %}
                               {% endif %}
                             </td>
-                            <td><a role="button" class="btn btn-sm btn-default" href="{% url 'admin:td_maternal_maternaleligibility_change' obj.pk %}?&next=&next={% url 'search_url' %}">Edit {{ obj.reference_pk|make_list|slice:"-8:"|join:"" }}</a></td>
+                            <td><a role="button" class="btn btn-sm btn-default" href="{% url 'admin:td_maternal_maternaleligibility_change' obj.pk %}?&next=&next={% url 'search_url' %}">Edit {{ obj.reference|make_list|slice:"-8:"|join:"" }}</a></td>
                             <td>{{ obj.reason_ineligible|default:"" }}</td>
                             <td>{{ obj.age_in_years }}y</td>
                             <td>{% if obj.has_omang == 'Yes' %}Citizen{% else %}Non-citizen{% endif %}</td>
