--- a/td_dashboard/templates/td_dashboard/search_dashboard.html
+++ b/td_dashboard/templates/td_dashboard/search_dashboard.html
@@ -55,6 +55,7 @@
                         {% endfor %}
                       </tbody>
                     </table>
+                    {% include 'td_dashboard/paginator.html' %}
                     </div>
                   {% endif %}
                 </div>
@@ -62,45 +63,6 @@
             </div>
           </div>
 
-    <div class="paginator" style="text-align:center">
-     <span class="step-links">
-     	{% if results %}
-    	 <a href="{% url 'subject_dashboard_url' page=1 %}" class="btn btn-sm btn-default"><<</a>
-    	{% else %}
-    	<a class="btn btn-sm disabled btn-default"><<</a>
-    	{% endif %}
-    	
-        {% if results.has_previous %}
-            <a href="{% url 'subject_dashboard_url' page=results.previous_page_number %}" class="btn btn-sm btn-default"><</a>
-        {% else %}
-        	<a class="btn btn-sm disabled btn-default"><</a>
-        {% endif %}
-
-		{% if results %}
-        	<span class="text small">
-            	Page {{ results.number }} of {{ results.paginator.num_pages }}
-        	</span>
-        {% else %}
-        	<span class="text small">
-            	Page 1 of 1
-        	</span>        
-        {% endif %}
-        
-        {% if results.has_next %}
-            <a href="{% url 'subject_dashboard_url' page=results.next_page_number %}" class="btn btn-sm btn-default">></a>
-        {% else %}
-        	<a class="btn btn-sm disabled btn-default">></a>
-        {% endif %}
-        
-        {% if results %}
-        	<a href="{% url 'subject_dashboard_url' page=results.paginator.num_pages %}" class="btn btn-sm btn-default">>></a>
-        {% else %}
-        	<a class="btn btn-sm disabled btn-default">>></a>
-        {% endif %}       
-    </span>
-    </div>
-
-	</br>
 
       <div class="col-md-4">
         <div class="panel panel-info">
