fix home url bug

--- a/tshilo_dikotla/templates/tshilo_dikotla/home.html
+++ b/tshilo_dikotla/templates/tshilo_dikotla/home.html
@@ -32,7 +32,7 @@
                 <span class="glyphicon glyphicon-earphone pull-right" aria-hidden="true"></span>
           </a></li>
           {% endcomment %}
-          <li><a id="link-verify-consent-subjects" href="{% url 'admin:td_maternal_maternalconsent_changelist' %}">Verify Consents
+          <li><a id="link-verify-consent-subjects" href="{% url 'td_maternal_admin:td_maternal_maternalconsent_changelist' %}">Verify Consents
                 <!--<span id="bdg-consent-verified" class="badge pull-right"></span>-->
           </a></li>
           <li role="presentation"><a id="link-pending-transactions" href="#">Manage transactions
