--- a/td_dashboard/templates/td_dashboard/enrollments.html
+++ b/td_dashboard/templates/td_dashboard/enrollments.html
@@ -1,13 +1,9 @@
     <div class="panel-group">
     	<div class="panel panel-info">
       <div class="panel-body"> 
-	  				 {% for label, url in enrollments %}
-					 	{% if dashboard_type == 'maternal' %}
-	  						<a role="button" class="btn btn-sm {% if "Add" not in label %}btn-success{% else %}btn-default{% endif %}" href="{{url}}?next={% url 'subject_dashboard_url' subject_identifier %}&subject_identifier={{ subject_identifier }}">{% if "Add" not in label %}<span class="glyphicon glyphicon-ok"></span> {% endif %}{{ label }}</a>
-	  					{% else %}
-	  						<a role="button" class="btn btn-sm {% if "Add" not in label %}btn-success{% else %}btn-default{% endif %}" href="{{url}}?next={% url 'infant_subject_dashboard_url' subject_identifier %}&subject_identifier={{ subject_identifier }}">{% if "Add" not in label %}<span class="glyphicon glyphicon-ok"></span> {% endif %}{{ label }}</a>
-	  					{% endif %}
-		 			{% endfor %}
+		{% for obj in enrollment_objects %}
+			<a role="button" class="btn btn-sm {% if obj.id %}btn-success{% else %}btn-default{% endif %}" href="{% if obj.get_absolute_url %}{{ obj.get_absolute_url }}{% else %}{% url obj.admin_url_name %}{% endif %}?next={% url dashboard_url_name subject_identifier %}&subject_identifier={{ subject_identifier }}">{{ obj.verbose_name }}</a>
+		{% endfor %}
       </div>
     </div>
   </div>
