--- a/td_dashboard/templates/td_dashboard/subject_dashboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_dashboard.html
@@ -16,16 +16,18 @@
 
 {% block crfs %}
 	{% if crfs %}
-  		{% include "td_dashboard/infant/crfs.html" %}
+  		{% include "td_dashboard/crfs.html" %}
   	{% endif %}    
 {% endblock crfs %}
 
 {% block requisitions %}
   {% if requisitions %}
-  	{% include "td_dashboard/infant/requisitions.html" %}
+  	{% include "td_dashboard/requisitions.html" %}
   {% endif %}    
 {% endblock requisitions %}
 
 {% block locator_information %}
-	{% include "td_dashboard/maternal/locator.html" %}
+  {% if maternal_locator %}
+	 {% include "td_dashboard/maternal_locator.html" %}
+  {% endif %}
 {% endblock locator_information %}
